# mcp-gateway

./: .codacy.yml  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md  about.hbs  about.toml  deny.toml  model.md  mutation.json  prd.json  progress.txt
.cargo/: config.toml  mutants.toml
.claude/: settings.json
.config/: nextest.toml
.github/: dependabot.yml
.github/formula/: mcp-gateway.rb.template
.github/scripts/: calculate-cumulative-score.sh  calculate-mutation-score.sh  find-mutants-to-test.sh  generate-coverage-map.sh
.github/tests/: test-cumulative-score.sh  test-find-mutants-to-test.sh
.github/workflows/: ci.yml  codeql.yml  mutants.yml  pipeline.yml  release.yml
scripts/: check-mutability.sh  check_coverage.py  post-edit-hook.sh
src/: lib.rs  main.rs
src/adapters/driven/: cli.rs  mod.rs  null_cli.rs  upstream.rs
src/cli/: command.rs  runner.rs
src/cli_tools/: executor.rs  mod.rs  template.rs
src/config/: mod.rs  model.rs  store.rs
src/daemon/: attach.rs  error.rs  pid.rs
src/filter/: allowlist.rs  compound.rs  denylist.rs  mod.rs
src/hexagon/: mod.rs
src/oauth/: callback.rs  error.rs  mod.rs  service.rs
src/proxy/: error.rs  handler.rs  mod.rs  runner.rs
src/registry/: error.rs  service.rs
tests/: adapters.rs  adapters_driven_test.rs  adapters_driving_test.rs  architecture_test.rs  cli_test.rs  e2e_test.rs  hexagon.rs  hexagon_test.rs  proxy_e2e_test.rs  proxy_stress_test.rs
tests/adapters_driven_test/: cli_execution.rs  configuration.rs  mcp_protocol.rs  oauth.rs  storage.rs
tests/adapters_driving_test/: process.rs  ui_runner.rs
tests/common/: gateway_helpers.rs  mod.rs  registry_helpers.rs
tests/hexagon_test/: gateway.rs  mapping.rs  policy.rs
tests/support/: echo_server.rs  multi_echo_server.rs
(+130 files in other folders)
