[package]
name = "mcp-gateway"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A proxy/firewall for Model Context Protocol (MCP) servers"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
indexing_slicing = "deny"

[profile.mutants]
inherits = "test"
debug = "none"
