[package]
name = "mcp-gateway"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A proxy/firewall for Model Context Protocol (MCP) servers"

[[bin]]
name = "echo-mcp-server"
path = "tests/support/echo_server.rs"

[dependencies]
async-trait = "0.1"
axum = "0.8"
clap = { version = "4.5", features = ["derive"] }
dirs = "6"
http = "1"
reqwest = "0.13"
rmcp = { version = "0.17", features = ["client", "server", "transport-io", "transport-child-process", "transport-streamable-http-client-reqwest", "transport-streamable-http-server", "reqwest", "auth"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "net", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-util = "0.7"
url = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
indexing_slicing = "deny"

[profile.mutants]
inherits = "test"
debug = "none"
